# genesis_medicine

./: .gitignore  .zenodo.json  01_data_acquisition.ipynb  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  LICENSES.md  README.md  Snakefile  dvc.yaml  pyproject.toml  requirements.txt
conf/: config.yaml
data/: chembl_mmp1_calibration.csv  fair_assay_schema.json  sar_panel_phase2.csv  skin_compounds_curated.csv  skin_compounds_seed.csv  skin_compounds_seed_v2.csv
docker/: Dockerfile.base  Dockerfile.structure  docker-compose.yml
docs/: ABFE_PROTOCOL_LIMITATIONS.md  ACTIVE_LEARNING_DOCKING_SURROGATE.md  ARCHITECTURE.md  CHROMANOL_GENERATIVE_OPTIMIZER.md  CODEX_CURATOR_LOOP_PROMPT.md  CODEX_HANDOFF_2026-04-30.md  CODE_REVIEW.md  COLLABORATOR_OUTREACH.md  COMPUTE_INVESTMENT_PRIOR_ART_REVIEW_2026-05-02.md  CREATIVE_DISCOVERY_GAP_MATRIX.md  CREATIVE_DISCOVERY_GAP_REVIEW_2026-05-02.md  CRO_TIER1_DECISION.md  CRO_TIER1_RFQ.md  DERMAL_PBPK_IVPT_GATE.md  DERMAL_REGULATORY_SAFETY_GATE.md  DEVELOPABILITY_CMC_GATE.md  DMTL_EXPERIMENT_CARD_FACTORY.md  DRUGBANK_REPLY_TEMPLATE.md  EMBELIN_LITERATURE_REVIEW.md  EXOCOBIO_PARTNERSHIP_PROPOSAL.md  FAIR_ASSAY_SCHEMA.md  FREE_ENERGY_VALIDATION_PLAN.md  GENETIC_CAUSALITY_DIRECTION_GATE.md  HYDRATION_KINETICS_GATE.md  INSTALL_WINDOWS.md  IP_FTO_WATCHLIST.md  KOREAN_MEDAI_PARTNERSHIP.md  LICENSING.md  METABOLITE_REACTIVE_RISK_GATE.md  MFDS_K_BIO_LANDSCAPE.md  MFDS_PRE_IND_PREP.md  MMP1_ZAFF_ABFE_GATE.md  MODALITY_IP_NOVELTY_GATE.md  MODEL_GOVERNANCE_REGISTRY.md  MODEL_VALIDATION_UNCERTAINTY_GATE.md  MULTI_FIDELITY_BO_PLANNER.md  OLIX_PARTNERSHIP_PROPOSAL.md  OPENFOLD3_AQAFFINITY_PATCH_MANIFEST_2026-05-03.md  P23_PIGMENTATION_CHROMANOL_OUTLINE.md  P24_SCAR_FIBROSIS_TOPICAL_OUTLINE.md  (+38 more)
manuscript_egcg/: manuscript.docx  manuscript.html  manuscript.md  references.bib
manuscript_emb3/: manuscript.docx  manuscript.html  manuscript.md
pilot/: D_NATIVE_FULL_MIGRATION_20260502_220957.txt  auto_queue_decision_policy.json  auto_result_planner_latest.json  codex_curator_context.md  codex_curator_decision.md  codex_curator_last.md  codex_curator_probe.md  codex_curator_request.md  completed_pilot_raw_archive_manifest.jsonl  creative_discovery_queue_policy.json  d_drive_cleanup_manifest_20260502_212846.txt  evidence_ledger_meta.json  live_status_report.md  monitor_status_latest.txt  multi_fidelity_schedule_meta.json  npass_stop_report_20260502_220806.txt  queue_metrics.json  queue_state.json  run_skin_pilot.py  scientific_gates.yaml  skin_pilots_summary.csv  (+1 more)
(+1772 files in other folders)
