[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesis-medicine"
version = "2.0.0a0"
description = "AlphaFold-era drug & herbal medicine discovery pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Genesis_Medicine" }]

dependencies = [
    # core
    "numpy>=1.26,<2.2",
    "pandas>=2.2",
    "pyarrow>=16",
    "polars>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "loguru>=0.7",
    "requests>=2.32",
    "requests-cache>=1.2",
    "diskcache>=5.6",
    "tenacity>=8.3",
    "tqdm>=4.66",
    # config / orchestration
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "prefect>=3.0",
    # ml core (CUDA wheels installed separately via Dockerfile)
    "torch>=2.3,<2.9",
    "transformers>=4.45",
    "datasets>=3.0",
    "accelerate>=0.34",
    # cheminformatics
    "rdkit>=2024.09",
    "chembl_webresource_client>=0.10",
    # bio
    "biopython>=1.84",
    # NER
    "gliner>=0.2.13",
    # graphs / embeddings
    "networkx>=3.3",
    # tracking
    "mlflow>=2.17",
    # reporting
    "panel>=1.4",
    "bokeh>=3.4",
    "py3dmol>=2.3",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]
structure = [
    # Boltz-2 / Protenix installed from their own extras; listed for awareness:
    "boltz>=2.0",
    # protenix installed via its own installer (see docs/INSTALL_WINDOWS.md)
]
screening = [
    # DiffDock-L and GNINA are installed from source; see docker/ images
]
admet = [
    "admet-ai>=1.4",
    "chemprop>=2.0",
]
md = [
    "openmm>=8.1",
    "openff-toolkit>=0.16",
]

[project.scripts]
genesis = "genesis_medicine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis_medicine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: integration tests that may take minutes",
    "gpu: requires CUDA device",
    "network: requires outbound network access",
]
